2010-05-06  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array::delete_elements (const idx_vector&)): Only call
	resize1 when deleting the last element of a vector.

2010-05-06  Jaroslav Hajek  <highegg@gmail.com>

	* oct-norm.h: Fix include guard.

2010-05-06  Jaroslav Hajek  <highegg@gmail.com>

	* dbleSCHUR.cc (SCHUR::init): Handle empty matrix case.
	Use clear rather than resize to realloc matrix.
	* floatSCHUR.cc (FloatSCHUR::init): Ditto.
	* CmplxSCHUR.cc (ComplexSCHUR::init): Ditto.
	* fCmplxSCHUR.cc (FloatComplexSCHUR::init): Ditto.

2010-05-04  John W. Eaton  <jwe@octave.org>

	* CollocWt.cc (diff, jcobi, dfopr): New functions, based on
	Fortran functions in libcruft/villad.
	(jcobi): Handle iteration failure at large N.
	(CollocWt::init): Call them instead of Fortran code.
	* CollocWt.h (CollocWt::initialized): Declare as bool, not int.
	Change all uses.
	Addresses bug #29473.

2010-05-03  Jaroslav Hajek  <highegg@gmail.com>

	* dbleSVD.h (SVD::driver): New enum.
	(SVD::SVD, SVD::init): Add driver option.
	* floatSVD.h (FloatSVD::FloatSVD, FloatSVD::init): Add driver option.
	* CmplxSVD.h (ComplexSVD::ComplexSVD, ComplexSVD::init):
	Add driver option.
	* fCmplxSVD.h (FloatComplexSVD::FloatComplexSVD,
	FloatComplexSVD::init): Add driver option.
	* dbleSVD.cc (SVD::init): Optionally use xGESDD driver.
	* floatSVD.cc (FloatSVD::init): Ditto.
	* CmplxSVD.cc (ComplexSVD::init): Ditto.
	* fCmplxSVD.cc (FloatComplexSVD::init): Ditto.

2010-04-28  John W. Eaton  <jwe@octave.org>

	* dim-vector.h (dim_vector (const octave_idx_type *, size_t)): Delete.
	* Sparse.cc (Sparse<T>::assign): Cast 0 to octave_idx_type in
	call to Sparse<T> constructor.
	Addresses bug #29692.

2010-04-27  John W. Eaton  <jwe@octave.org>

	* intNDArray.cc (intNDArray<T>::abs, intNDArray<T>::signum):
	Create new vector for return values.  Fixes bug #29685.

2010-04-23  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::assign): Fix typos.
